--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -16,90 +16,119 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "explorer/images/favicon-16x16.png" %}">
     <link rel="manifest" href="{% static "explorer/images/site.webmanifest" %}">
     <link rel="mask-icon" href="{% static "explorer/images/safari-pinned-tab.svg" %}" color="#252443">
+    <script defer src="https://pro.fontawesome.com/releases/v5.13.0/js/all.js" integrity="sha384-Z0e6PSokCQP510gixgZGPs+obVv8eogS/eS2+/7lLSMOfmLnWBgPQppPispQXGUM" crossorigin="anonymous"></script>
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content=“#ffffff”>
 
     <title>Serol's Cosmic Adventures | {% block title %}powered by Las Cumbres Observatory{% endblock %}</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Aldrich" rel="stylesheet">
 
-    <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/dc4274378e.js"></script>
+    <link href="{% static "explorer/css/serol-styles.css" %}" rel="stylesheet">
   </head>
 
   <body  class="{% block mission-class %}{%endblock%}">
 
       <header>
       {% block menubar %}
-        <nav class="navbar navbar-home navbar-toggleable-sm navbar-inverse">
-          <a class="navbar-brand" href="/" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="/">
+      <img src="{% static 'explorer/images/serol-logo-blue.png' %}" alt="serol logo">
+    </a>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="/">{% trans "Home" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="/about/">{% trans "About Serol" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="/videos/">{% trans "Videos" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="/resources/">{% trans "Resources" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'missions' %}" id="missions-menu-item">{% trans "Missions" %}</a></li>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
 
-              {% if request.user.is_authenticated %}
-              <li class="nav-item nav-separator"><a class="nav-link" href="{% url 'stickers' %}">{% trans "My Progress" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a></li>
-              {% else %}
-              <li class="nav-item nav-separator" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
-              <li class="nav-item " id="register"><a class="nav-link" href="{% url 'registration_register' %}">{% trans "Register" %}</a></li>
-              {% endif %}
-            </ul>
-            <div class="dropdown">
-              <a class="btn btn-md btn-4 btn-4a dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Video Game
-              </a>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a href="/game/">
-                  <img src="{% static 'explorer/images/titlescreensquare.png' %}" alt="serol game button" class="img-fluid" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </nav>
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/about/">
+        {% trans "About Serol" %}
+      </a>
+      <a class="navbar-item" href="/videos/">
+        {% trans "Movies" %}
+      </a>
+      <a class="navbar-item" href="/resources/">
+        {% trans "Education" %}</a>
+      </a>
+      <a class="navbar-item" href="{% url 'missions' %}" id="missions-menu-item">
+        {% trans "Missions" %}
+      </a>
+      <a class="navbar-item" href="/game/" id="missions-menu-item">
+        {% trans "Game" %}
+      </a>
+    </div>
+
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+
+          {% if request.user.is_authenticated %}
+          <a class="button" href="{% url 'stickers' %}">{% trans "Stickers" %}</a>
+          <a class="button" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
+          {% else %}
+          <a class="button is-primary" href="{% url 'auth_login' %}">{% trans "Login" %}</a>
+          <a class="button is-light" href="{% url 'registration_register' %}">{% trans "Register" %}</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
         {% endblock%}
       </header>
 
-      <main>
         {% for message in messages %}
-        <div class="alert">
-         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <div class="notification is-warning is-light">
+         <button class="delete" onclick="this.parentElement.style.display='none';"></button>
          {{ message }}
         </div>
         {% endfor %}
 
-        {% block main-content %}
+      {% block main-content %}
+      <section class="section">
 
-            <div class="container pt-5">
-              <div class="centre-container">
-                {% block main-body %}
-                {% endblock %}
+          <div class="container">
+            <div class="centre-container">
+              {% block main-body %}
+              {% endblock %}
+            </div>
+          </div>
+
+      </section>
+      {% endblock %}
+
+      <footer class="footer">
+          <div class="columns">
+            <div class="column is-half">
+              <div class="content is-pulled-right">
+              <figure class="image">
+              <img src="{% static 'explorer/images/rainbow-serol-logo.png' %}" alt="serol logo" style="width:150px" />
+              <h4>Serol's Cosmic Explorers</h4>
+              </figure>
+            </div>
+            </div>
+            <div class="column is-half">
+              <div class="content">
+              <ul>
+                <li><a href="/videos/">Serol Movies</a></li>
+                <li><a href="https://lco.global/about/">About Las Cumbres Observatory</a></li>
+                <li><a href="https://lco.global/education/">Education projects from LCO</a></li>
+                <li><a href="https://lco.global/observatory/privacy-policy/">Data Use &amp; Privacy</a></li>
               </div>
             </div>
-
-        {% endblock %}
-      </main>
-
-<footer class="footer">
-  <div class="container">
-    <span class="text-muted">&copy; <a href="https://lco.global">Las Cumbres Observatory</a></span> |
-    <span class="text-muted"><a href="https://lco.global/observatory/privacy-policy/">Privacy Policy</a></span>
-  </div>
-</footer>
+          </div>
+      </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="{% static "explorer/js/auth.js" %}"  type="text/javascript" ></script>
     <script src="{% static "explorer/js/lottie2.js" %}"  type="text/javascript" ></script>
 
