--- a/app/explorer/templates/explorer/login.html
+++ b/app/explorer/templates/explorer/login.html
@@ -13,40 +13,57 @@
 {% endblock %}
 
 {% block main-body %}
-			<h1>Serol</h1>
-			<h3>{% trans "Log in with your Serol or Las Cumbres Observatory account" %}</h3>
-      <p>{% trans "Want to join Serol's Cosmic Explorers?" %} <a href="{% url 'registration_register' %}">{% trans "Register for an account!" %}</a>
-      </p>
-      {% for m in messages %}
-      <p class="bg-warning">{{m|safe}}</p>
-      {% endfor %}
-      <form action="" method="post"  id="loginForm" >
+<h1>Serol</h1>
+<h3>{% trans "Log in with your Serol or Las Cumbres Observatory account" %}</h3>
+<p>{% trans "Want to join Serol's Cosmic Explorers?" %} <a href="{% url 'registration_register' %}">{% trans "Register for an account!" %}</a>
+</p>
+{% for m in messages %}
+<p class="bg-warning">{{m|safe}}</p>
+{% endfor %}
+<div class="card">
+  <div class="card-content">
+    <div class="content">
+      <form action="" method="post" id="loginForm">
         {% csrf_token %}
-        <div class="row">
-          <div class="col-md-6 col-12">
-      			<label for="username">Username:</label>
+
+        <div class="field">
+          <label class="label">Username</label>
+          <div class="control has-icons-left has-icons-right">
+            <input class="input" type="text" name="username" id="username">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
           </div>
-          <div class="col-md-6 col-12">
-      			<input type="text" name="username" value="" id="username">
-      			<div class="red">{{form.username.errors.as_text}}</div>
-          </div>
+          <p class="help is-failure">{{form.username.errors.as_text}}</p>
         </div>
-      	<div class="row pt-2">
-          <div class="col-md-6 col-12">
-        		<label for="password">Password:</label>
+
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control has-icons-left has-icons-right">
+            <input type="password" name="password" value="" id="password" class="input">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
           </div>
-          <div class="col-md-6 col-12">
-        		<input type="password" name="password" value="" id="password">
-        		<div class="red">{{form.password.errors.as_text}}</div>
+          <div class="is-failure">{{form.password.errors.as_text}}</div>
+        </div>
+
+        <input type="hidden" name="next" value="{{ next }}">
+        <div class="field is-grouped">
+          <div class="control">
+            <input type="submit" id="login-btn" class="button is-link" value="Log me in">
           </div>
-      	</div>
-        <div class="pt-2">
-          <input type="hidden" name="next" value="{{ next }}">
-      		<button id="login-btn" class="btn btn-lg btn-4 btn-4a">Log me in</button>
+          <div class="control">
+            <button class="button is-link is-light">Cancel</button>
+          </div>
         </div>
         <p class="small">By logging in, you agree to <a href="http://lco.global/observatory/termsofuse" target="_blank">the Las Cumbres Observatory terms of use</a>.</p>
-      	<p>
-      		<a href="{% url 'password_reset' %}">Forgot your password?</a>
-      	</p>
+        <p>
+          <a href="{% url 'password_reset' %}">Forgot your password?</a>
+        </p>
       </form>
+
+    </div>
+  </div>
+</div>
 {% endblock %}
